--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,6 +1,6 @@
 name: example
-description: Example Project for flutter_chips_input
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+description: Example demonstrating use of ChipsInput.
+publish_to: 'none'
 version: 1.0.0+1
 
 environment:
@@ -21,3 +21,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+   - assets/avatars/
