--- a/example/.gitignore
+++ b/example/.gitignore
@@ -1,45 +1,22 @@
-# Miscellaneous
-*.class
-*.log
-*.pyc
-*.swp
-.DS_Store
-.atom/
-.buildlog/
-.history
-.svn/
-
-# IntelliJ related
-*.iml
-*.ipr
-*.iws
-.idea/
-
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
-# Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
 .dart_tool/
+.DS_Store
 .flutter-plugins
 .flutter-plugins-dependencies
+.idea/
 .packages
 .pub-cache/
 .pub/
-/build/
+.vscode/
+*.iml
+*.ipr
+*.iws
+**/doc/api/
+**/ios/Flutter/.last_build_id
+build/
+android/
+ios/
+lib/generated_plugin_registrant.dart
 linux/
 macos/
 web/
 windows/
-
-# Web related
-lib/generated_plugin_registrant.dart
-
-# Symbolication related
-app.*.symbols
-
-# Obfuscation related
-app.*.map.json
