--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: flutter_chips_input
+name: choose_input_chips
 description: Flutter library for building input fields with chips as input options.
 version: 2.0.0
-homepage: https://github.com/nlfiedler/flutter_chips_input
+homepage: https://github.com/nlfiedler/choose_input_chips
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
