chore: set version to 1.0, edit descriptions
This is a new package that will be published starting from 1.0.0 under a new
name, hence update the project metadata and changelog.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: choose_input_chips
-description: Flutter library for building input fields with chips as input options.
-version: 2.0.0
+description: Build form fields with multiple values and text completion.
+version: 1.0.0
 homepage: https://github.com/nlfiedler/choose_input_chips
 
 environment:
